# entservices-deviceanddisplay

./: CHANGELOG.md  CMakeLists.txt  README.md  build_dependencies.sh  cov_build.sh  manual_Analysis_deviceanddisplay.csv  services.cmake
.github/: CODEOWNERS  copilot-instructions.md
.github/instructions/: Plugin.instructions.md  Pluginimplementation.instructions.md
.github/workflows/: L1-tests.yml  L2-hal-plugins-tests.yml  L2-tests-oop.yml  L2-tests.yml  fossid_integration_stateless_diffscan_target_repo.yml  json_validator.yml  native_full_build.yml  tests-trigger.yml  trigger_infra.yml  trigger_testframework.yml
DeviceDiagnostics/: CMakeLists.txt  DeviceDiagnostics.cpp  DeviceDiagnostics.h  DeviceDiagnosticsImplementation.cpp  DeviceDiagnosticsImplementation.h  Module.h
DeviceInfo/: CMakeLists.txt  DeviceAudioCapabilities.cpp  DeviceAudioCapabilities.h  DeviceInfo.cpp  DeviceInfo.h  DeviceInfo.vcxproj  DeviceInfoImplementation.cpp  DeviceInfoImplementation.h  DeviceInfoJsonRpc.cpp  DeviceVideoCapabilities.cpp  DeviceVideoCapabilities.h  Module.h
DeviceInfo/Implementation/: DeviceAudioCapabilities.cpp  DeviceAudioCapabilities.h  DeviceInfo.cpp  DeviceInfo.h  DeviceVideoCapabilities.cpp  DeviceVideoCapabilities.h  FirmwareVersion.cpp  FirmwareVersion.h
DeviceSettings/: Audio.cpp  Audio.h  CMakeLists.txt  DSContoller.h  DSController.cpp  DSController.h  DSProductTraitsHandler.cpp  DSProductTraitsHandler.h  DSPwrEventListener.cpp  DSPwrEventListener.h  DeviceSettings.cpp  DeviceSettings.h  DeviceSettingsAudioImplementation.cpp  DeviceSettingsAudioImplementation.h  DeviceSettingsFPDImplementation.cpp  DeviceSettingsFPDImplementation.h  DeviceSettingsHdmiInImplementation.cpp  DeviceSettingsHdmiInImplementation.h  DeviceSettingsImplementation.cpp  DeviceSettingsImplementation.h  DeviceSettingsTypes.h  HdmiIn.cpp  HdmiIn.h  fpd.cpp  fpd.h
DeviceSettings/hal/: dAudio.h  dAudioImpl.h  dFPDImpl.h  dHdmiInImpl.h
DeviceSettingsManager/: Audio.cpp  Audio.h  CMakeLists.txt  CODE_ORGANIZATION.md  DeviceSettingsManager.conf.in  DeviceSettingsManager.config  DeviceSettingsManager.cpp  DeviceSettingsManager.h  DeviceSettingsManagerAudio.cpp  DeviceSettingsManagerFPD.cpp  DeviceSettingsManagerHDMIIn.cpp  DeviceSettingsManagerImp.cpp  DeviceSettingsManagerImp.h  DeviceSettingsManagerTypes.h  HdmiIn.cpp  HdmiIn.h  deviceUtils.h  fpd.cpp  fpd.h  main.cpp
DeviceSettingsManager/hal/: Power.h  dAudio.h  dAudioImpl.h  dFPD.h  dFPDImpl.h  dHdmiIn.h  dHdmiInImpl.h
DisplayInfo/: CMakeLists.txt  DisplayInfo.cpp
DisplayInfo/DeviceSettings/: PlatformImplementation.cpp
DisplayInfo/DeviceSettings/RPI/: SoC_abstraction.cpp
DisplayInfo/Linux/: PlatformImplementation.cpp
DisplayInfo/RPI/: PlatformImplementation.cpp
DisplaySettings/: DisplaySettings.cpp  DisplaySettings.h  Module.h
FrameRate/: CMakeLists.txt  FrameRate.config  FrameRate.cpp  FrameRate.h  FrameRateImplementation.cpp  FrameRateImplementation.h  Module.h  README.md
L2HalMock/: README.md  build.sh  build_PC.sh  debug_build.sh  env.sh  manifest.txt  manifest.xml  stop.sh
L2HalMock/start_services/: ReadMe.txt
NcalcOld/: CMakeLists.txt  Module.h  NcalcOld.conf.in  NcalcOld.config  NcalcOld.cpp  NcalcOld.h
PowerManager/: AckController.h  CMakeLists.txt  DeepSleepController.cpp  DeepSleepController.h  Module.h  PowerController.cpp  PowerController.h  PowerManager.cpp  PowerManager.h  PowerManagerImplementation.cpp  PowerManagerImplementation.h  PowerUtils.cpp  PowerUtils.h  RebootController.cpp  RebootController.h  Settings.cpp  Settings.h  ThermalController.cpp  ThermalController.h  deepSleepMgr.h  libIBus.c  mfr_temperature.h  rfcapi.h  secure_wrapper.h
PowerManager/Tests/: MockUtils.h  PowerManagerHalMock.cpp  PowerManagerHalMock.h  TestPowerManager.cpp
PowerManager/hal/: DeepSleepImpl.h  PowerImpl.h  Thermal.h  ThermalImpl.h  ThermalMfrImpl.h
SystemMode/: Module.h  SystemMode.cpp  SystemMode.h  SystemModeImplementation.cpp  SystemModeImplementation.h
SystemServices/: CMakeLists.txt  Module.h  SystemServices.cpp  SystemServices.h  SystemServicesHelper.cpp  SystemServicesHelper.h  cTimer.cpp  cTimer.h  thermonitor.cpp  uploadlogs.cpp
SystemServices/TestClient/: CMakeLists.txt  systemServiceTestClient.cpp
SystemServices/platformcaps/: platformcaps.cpp  platformcapsdata.cpp  platformcapsdata.h  platformcapsdatarpc.cpp
Tests/: CMakeLists.txt  README.md  entServicesCOMRPC-FrameRateTest.cpp
Tests/L1Tests/: CMakeLists.txt
Tests/L1Tests/tests/: WaitGroup.h  logs.txt  test_DeviceAudioCapabilities.cpp  test_DeviceDiagnostics.cpp  test_DeviceInfo.cpp  test_DeviceInfoJsonRpc.cpp  test_DeviceInfoWeb.cpp  test_DeviceVideoCapabilities.cpp  test_DisplayInfo.cpp  test_FirmwareVersion.cpp  test_FrameRate.cpp  test_PowerManager.cpp  test_PowerManagerSettings.cpp  test_PowerManagerThermalController.cpp  test_SystemServices.cpp  test_UserPreferences.cpp  test_Warehouse.cpp
Tests/L2HALMockTests/TestCases/DeviceDiagnostics/: DDUtils.py  DeviceDiagnosticsApis.py  TCID_001_DS_DEVICEDIAGNOSTICS_getConfiguration.py  (+4 more)
Tests/L2HALMockTests/Test_Framework/: TestManager.py
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/tests/: DeviceDiagnostics_L2Test.cpp  DeviceInfo_L2Test.cpp  DisplayInfo_L2Test.cpp  DisplaySettings_L2Test.cpp  FrameRate_L2Test.cpp  PowerManager_L2Test.cpp  SystemMode_L2Test.cpp  SystemService_L2Test.cpp  UserPreferences_L2Test.cpp  Warehouse_L2Test.cpp  test_PowerManager.cpp
UserPlugin/: UserPlugin.cpp  UserPlugin.h
UserPlugin/Temp/: IUserPlugin.h  UserPlugin.cpp  UserPlugin.h
UserPreferences/: Module.h  UserPreferences.cpp  UserPreferences.h
Warehouse/: CMakeLists.txt  Module.h  Warehouse.cpp  Warehouse.h  WarehouseImplementation.cpp  WarehouseImplementation.h
cmake/: FindDS.cmake  FindDeepSleepHal.cmake  FindIARMBus.cmake  FindMFR.cmake  FindPowerHal.cmake  FindRFC.cmake  Finddshal.cmake
helpers/: PluginInterfaceBuilder.h  UtilsController.h  UtilsLogging.h  UtilsString.h  UtilsgetFileContent.h  frontpanel.cpp  tptimer.h
helpers/WebSockets/: WSEndpoint.cpp
(+19 files in other folders)
